Make packageManagement settings, allow ignoring default package servers